# at2-node

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  codecov.yml  deny.toml  technical.md
.github/workflows/: deploy.yaml  rust.yml
examples/: double_spend.rs
src/: at2.proto  client.rs  lib.rs  proto.rs
tests/: cli.rs  execs.rs  lib.sh  send-asset-to-itself-keep-balance  send-two-tx-with-same-content-works  sent-tx-shows-in-latest-txs  server-config-resolve-addrs
