[package]
name = "at2-node"
version = "0.1.0"
authors = ["Ogier Bouvier <ogier@bouvier.family>", "Valérian Rousset <tharvik@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop" }
sieve = { git = "https://github.com/Distributed-EPFL/sieve" }
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
prost = { version = "0.9", default-features = false }
serde = { version = "1", features = ["derive"] }
snafu = "0.6"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tonic = { version = "0.6", default-features = false, features = ["codegen", "prost"] }

# cli
hex = { version = "0.4", features = ["serde"], optional = true }
structopt = { version = "0.3", optional = true }
toml = { version = "0.5", optional = true }

# client
serde_str = { version = "0.1", optional = true }
url = { version = "2", optional = true }

# server
contagion = { git = "https://github.com/Distributed-EPFL/contagion", optional = true }
murmur = { git = "https://github.com/Distributed-EPFL/murmur", optional = true }
futures = { version = "0.3", optional = true }
num_cpus = { version = "1", optional = true }
tonic-web = { version = "0.2", optional = true }
tracing-fmt = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tonic = { version = "0.6", default-features = false, features = ["transport"] }

[target.'cfg(target_family = "wasm")'.dependencies]
grpc-web-client = { git = "https://github.com/titanous/grpc-web-client", branch = "main" }

[dev-dependencies]
duct = "0.13"
nix = "0.23"

[build-dependencies]
tonic-build = { version = "0.6", default-features = false, features = ["prost"] }

[features]
default = []
_cli = [
	"drop/system",
	"hex",
	"sieve/system",
	"structopt",
	"tokio/net",
	"tokio/rt-multi-thread",
	"toml",
]
client = [
	"_cli",

	"serde_str",
	"url",
]
server = [
	"_cli",

	"contagion/system",
	"futures",
	"murmur/system",
	"num_cpus",
	"tonic-web",
	"tracing",
	"tracing-fmt",
]

[[bin]]
name = "client"
required-features = ["client"]

[[bin]]
name = "server"
required-features = ["server"]
